# EquinoxDB

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Registro.py  consola.py  env.py  log.txt  pyproject.toml  requirements-dev.txt  utilidades.py
.github/workflows/: tests.yml
Documentacion-EquinoxDB/.obsidian/: workspace.json
Documentacion-EquinoxDB/docs/: .$arquitectura.drawio.bkp
Documentacion-EquinoxDB/recursos/: arquitectura.drawio
colecciones/: Personas.json
docs/: 1. Planteamiento del problema.md  2. Especificación de Requisitos.md
examples/: basic_usage.py  cli_example.py  log.txt  prueba_manual.py
src/equinoxdb/: collection.py  database.py
tests/: run_tests.py  test_basic.py  test_integration.py
tests/fixtures/: Animales.json  Personas.json
