[project]
name = "equinoxdb"
version = "1.0.0"
description = "Lightweight embedded NoSQL database for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bernardo Parrales"}
]
keywords = ["database", "nosql", "json", "embedded", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/BernardoParrales/EquinoxDB"
Documentation = "https://github.com/BernardoParrales/EquinoxDB/tree/main/docs"
Repository = "https://github.com/BernardoParrales/EquinoxDB"
Issues = "https://github.com/BernardoParrales/EquinoxDB/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src/equinoxdb"]
omit = ["*/tests/*"]
